--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
 
                     <div class="registration__column">
-                        <h2 class="registration__tittle">Регистрируйся на нашу закрытую пати если ты<span>:</span></h2>
+                        <h2 class="registration__tittle">Регистрируйся на нашу закрытую <br>пати если ты<span>:</span></h2>
                     </div>
                     <div class="registration__column">
                         <div class="conditios">
@@ -215,28 +215,327 @@
                 </div>
 
                 <div class="registration__bottom">
+
                     <div class="features">
+                        <div class="features__spot">
+                            <img src="./img/registration/spot-2.png" alt="spot">
+                        </div>
+                        <h3 class="features__tittle">Приглашаем погрузиться в космическую атмосферу</h3>
                         <div class="features__list">
                             <div class="features__item">Безлимитный бар</div>
                             <div class="features__item">Ароматные кальяны</div>
                             <div class="features__item">Много сюрпризов</div>
                             <div class="features__item">Феерическая шоу-программа</div>
                             <div class="features__item">Атмосферные призы от спонсоров</div>
-                            <div class="features__item">Живая музыка
-                            </div>
+                            <div class="features__item">Живая музыка</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="feels">
-            космическая атмосфера  космическая атмосфера  космическая атмосфера
+        <div class="feels">космическая атмосфера  космическая атмосфера  космическая атмосфера  космическая атмосфера</div>
+    </section>
+
+
+    <section class="general-sponsor">
+        <div class="container">
+            <div class="general-sponsor__wrapper">
+                <h2 class="general-sponsor__title">Генеральные спонсоры</h2>
+                <div class="general-sponsor__list">
+                    <div class="general-sponsor__spot">
+                        <img src="./img/general-sponsor/spot.png" alt="spot">
+                    </div>
+                    <div class="general-sponsor__item">
+                        <div class="general-sponsor__label">
+                            <img src="./img/general-sponsor/sponsor_label.png" alt="sponsor label">
+                        </div>
+                        <div class="general-sponsor__description">
+                            <div class="general-sponsor__text">
+                                PMaffiliates — официальная партнерская программа Parimatch.<br> CPA/RS. Индия/СНГ/Латам. Большой бренд с историей,<br> которому доверяют игроки. Партнерства с UFC, Juventus,<br> Everton, Liester FC, LaLiga и наш амбассадор Connor McGregor — <br>всё это повышает узнаваемость продукта и конверт для...
+                            </div>
+                        </div>
+                        <div class="general-sponsor__contacts ">
+                            <a href="" class="general-sponsor__site">
+                                <img src="./img/general-sponsor/arrov.svg" alt="Arrow">
+                                <span class="general-sponsor__contact-text">Перейти на сайт</span>
+                            </a>
+                            <span class="general-sponsor__contact-text">Соц. сети:</span>
+                            <a href="#!" class="social-link">
+                                <img src="./img/general-sponsor/facebook.svg" alt="facebook">
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="./img/general-sponsor/instagram.svg" alt="instagram">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="general-sponsor__item">
+                        <div class="general-sponsor__label">
+                            <img src="./img/general-sponsor/sponsor_label.png" alt="sponsor label">
+                        </div>
+                        <div class="general-sponsor__description">
+                            <div class="general-sponsor__text">
+                                PMaffiliates — официальная партнерская программа Parimatch.<br> CPA/RS. Индия/СНГ/Латам. Большой бренд с историей,<br> которому доверяют игроки. Партнерства с UFC, Juventus,<br> Everton, Liester FC, LaLiga и наш амбассадор Connor McGregor — <br>всё это повышает узнаваемость продукта и конверт для...
+                            </div>
+                        </div>
+                        <div class="general-sponsor__contacts ">
+                            <a href="" class="general-sponsor__site">
+                                <img src="./img/general-sponsor/arrov.svg" alt="Arrow">
+                                <span class="general-sponsor__contact-text">Перейти на сайт</span>
+                            </a>
+                            <span class="general-sponsor__contact-text">Соц. сети:</span>
+                            <a href="#!" class="social-link">
+                                <img src="./img/general-sponsor/facebook.svg" alt="facebook">
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="./img/general-sponsor/instagram.svg" alt="instagram">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="general-sponsor__item">
+                        <div class="general-sponsor__label">
+                            <img src="./img/general-sponsor/sponsor_label.png" alt="sponsor label">
+                        </div>
+                        <div class="general-sponsor__description">
+                            <div class="general-sponsor__text">
+                                PMaffiliates — официальная партнерская программа Parimatch.<br> CPA/RS. Индия/СНГ/Латам. Большой бренд с историей,<br> которому доверяют игроки. Партнерства с UFC, Juventus,<br> Everton, Liester FC, LaLiga и наш амбассадор Connor McGregor — <br>всё это повышает узнаваемость продукта и конверт для...
+                            </div>
+                        </div>
+                        <div class="general-sponsor__contacts ">
+                            <a href="" class="general-sponsor__site">
+                                <img src="./img/general-sponsor/arrov.svg" alt="Arrow">
+                                <span class="general-sponsor__contact-text">Перейти на сайт</span>
+                            </a>
+                            <span class="general-sponsor__contact-text">Соц. сети:</span>
+                            <a href="#!" class="social-link">
+                                <img src="./img/general-sponsor/facebook.svg" alt="facebook">
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="./img/general-sponsor/instagram.svg" alt="instagram">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
 
+    <section class="exlusive-sponsor">
+        <div class="container">
+            <div class="exlusive-sponsor__wrapper">
+                <h2 class="exlusive-sponsor__title title">Эксклюзивный спонсор</h2>
 
+                <div class="exlusive-sponsor__list">
+                    <div class="exlusive-sponsor__spot1">
+                        <img src="./img/exlusive-sponsor/spot.png" alt="spot">
+                    </div>
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных гэмблинг-офферов. Это высокие комиссии, популярные бренды и быстрые выплаты.Мы создаем удобные, прибыльные и понятные условия...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
 
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных гэмблинг-офферов. Это высокие комиссии, популярные бренды и быстрые выплаты.Мы создаем удобные, прибыльные и понятные условия...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных гэмблинг-офферов. Это высокие комиссии, популярные бренды и быстрые выплаты.Мы создаем удобные, прибыльные и понятные условия...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных гэмблинг-офферов. Это высокие комиссии, популярные бренды и быстрые выплаты.Мы создаем удобные, прибыльные и понятные условия...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="exlusive-sponsor">
+        <div class="container">
+            <div class="exlusive-sponsor__wrapper">
+                <h2 class="exlusive-sponsor__title title">Премиум спонсор</h2>
+
+                <div class="exlusive-sponsor__list">
+                    <div class="exlusive-sponsor__spot2">
+                        <img src="./img/exlusive-sponsor/spot.png" alt="spot">
+                    </div>
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="exlusive-sponsor__item">
+                        <div class="exlusive-sponsor__label">
+                            <img src="./img/exlusive-sponsor/label.png" alt="sponsor">
+                        </div>
+                        <div class="exlusive-sponsor__description">
+                            <p class="exlusive-sponsor__text">
+                                Royal Partners — это партнерская программа, прямой рекламодатель 4 лицензионных...
+                            </p>
+                        </div>
+                        <div class="exlusive-sponsor__contacts">
+                            <a href="#!" class="exlusive-sponsor__link">
+                                <img src="./img/general-sponsor/arrov.svg" alt="arrow">
+                                <span class="exlusive-sponsor__link-text">Перейти на сайт</span>
+                            </a>
+                        </div>
+                    </div>
+
+                
+                </div>
+            </div>
+        </div>
+    </section>
 
     
 
