--- a/index.html
+++ b/index.html
@@ -661,7 +661,43 @@
     
 
 
+    <div class="overlay-reg">
+        <div class="modal-reg">
+            <h2 class="modal-reg__title">Форма регистрации</h2>
+            <p class="modal-reg__subtitle">Пожалуйста, напишите организаторам, если вы являетесь представителем партнерки.</p>
+            <form action="#" class="modal-reg__form form"  autocomplete="off">
+                <div class="form__item">
+                    <label for="phone">Телефон или ник в телеграме</label>
+                    <input id="phone" type="text" class="form__input phone" name="phone" required placeholder="+ 7 999 999 99 99">
+                </div>
 
+                <div class="form__item">
+                    <label for="name">Имя и Фамилия</label>
+                    <input id="name" type="text" class="form__input name" required placeholder="Иван Иванов">
+                </div>
+
+                <div class="form__item">
+                    <label for="email">Емайл</label>
+                    <input id="email" type="email" class="form__input email" placeholder="sample@gmail.com">
+                </div>
+
+                <div class="form__item">
+                    <label for="">Вертикаль, с которой работаете?</label>
+                    <input id="vertical" type="text" class="form__input vertical" placeholder="sample@gmail.com">
+                </div>
+
+                <div class="form__item">
+                    <label for="">Источник трафика, с которым работаете?</label>
+                    <input id="trafiс" type="text" class="form__input trafiс" placeholder="sample@gmail.com">
+                </div>
+
+                <div class="form__item">
+                    <button class="form__btn">Отправить</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
  
 
 </body>
