--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             <form action="#" class="modal-reg__form form"  autocomplete="off">
                 <div class="form__item">
                     <label for="phone">Телефон или ник в телеграме</label>
-                    <input id="phone" type="text" class="form__input phone" name="phone" required placeholder="+ 7 999 999 99 99">
+                    <input id="phone" type="tel" class="form__input phone" name="phone" required placeholder="+ 7 999 999 99 99">
                 </div>
 
                 <div class="form__item">
