--- a/index.html
+++ b/index.html
@@ -697,12 +697,12 @@
 
                 <div class="form__item">
                     <label for="">Вертикаль, с которой работаете?</label>
-                    <input id="vertical" type="text" class="form__input vertical" required placeholder="sample@gmail.com">
+                    <input id="vertical" type="text" class="form__input vertical" required placeholder="Ваш вариант ответа">
                 </div>
 
                 <div class="form__item">
                     <label for="">Источник трафика, с которым работаете?</label>
-                    <input id="trafiс" type="text" class="form__input trafiс" required placeholder="sample@gmail.com">
+                    <input id="trafiс" type="text" class="form__input trafiс" required placeholder="Ваш вариант ответа">
                 </div>
 
                 <div class="form__item">
