--- a/index.html
+++ b/index.html
@@ -682,27 +682,27 @@
             <form action="#" class="modal-reg__form form"  autocomplete="off">
                 <div class="form__item">
                     <label for="phone">Телефон или ник в телеграме</label>
-                    <input id="phone" type="tel" class="form__input phone" name="phone" required placeholder="+ 7 999 999 99 99">
+                    <input id="phone" type="tel" class="form__input phone" name="phone" required placeholder="+ 7 999 999 99 99" >
                 </div>
 
                 <div class="form__item">
                     <label for="name">Имя и Фамилия</label>
-                    <input id="name" type="text" class="form__input name" required placeholder="Иван Иванов">
+                    <input id="name" type="text" name="name" class="form__input name" required placeholder="Иван Иванов" >
                 </div>
 
                 <div class="form__item">
                     <label for="email">Емайл</label>
-                    <input id="email" type="email" class="form__input email" required placeholder="sample@gmail.com">
+                    <input id="email" type="email" name="email" class="form__input email" required placeholder="sample@gmail.com">
                 </div>
 
                 <div class="form__item">
-                    <label for="">Вертикаль, с которой работаете?</label>
-                    <input id="vertical" type="text" class="form__input vertical" required placeholder="Ваш вариант ответа">
+                    <label for="vertical">Вертикаль, с которой работаете?</label>
+                    <input id="vertical" type="text" name="vertical" class="form__input vertical" required placeholder="Ваш вариант ответа">
                 </div>
 
                 <div class="form__item">
-                    <label for="">Источник трафика, с которым работаете?</label>
-                    <input id="trafiс" type="text" class="form__input trafiс" required placeholder="Ваш вариант ответа">
+                    <label for="trafiс">Источник трафика, с которым работаете?</label>
+                    <input id="trafiс" name="trafiс" type="text" class="form__input trafiс" required placeholder="Ваш вариант ответа">
                 </div>
 
                 <div class="form__item">
