--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="main__content">
                     <h2 class="main__subtitle">
                         <span class="main__date">09 <span>/</span> 06 <span>/</span> 2021</span>
-                        <span class="main__date">8pm <span>-</span> 1am</span>
+                        <span class="main__date left">8pm <span>-</span> 1am</span>
                         <span class="main__city">Москва</span>
                     </h2>
                     <img src="./img/main/galaxy.png" alt="galaxy" class="main__image">
