--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                                     Лиана
                                     <span>ник в телеграме:</span>
                                 </div>
-                                <a href="#!" class="organizators__telegram">@LianaNu</a>
+                                <a href="tg://resolve?domain='@LianaNu'" class="organizators__telegram">@LianaNu</a>
                             </div>
 
                             <div class="organizators__item">
@@ -658,7 +658,7 @@
                                     Екатерина
                                     <span>ник в телеграме:</span>
                                 </div>
-                                <a href="#!" class="organizators__telegram">@kkbarselona</a>
+                                <a href="tg://resolve?domain='@kkbarselona'" class="organizators__telegram">@kkbarselona</a>
                             </div>
                         </div>
                     </div>
