--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a href="#!" class="nav__link">Контакты</a>
                         </li>
                     </ul>
-                    <button class="nav__registration">Регистрация на ивент</button>
+                    <button class="nav__registration">Бесплатная регистрация</button>
 
                 
                 </nav>
