--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     </div>
                 </div>
                 <div class="statistics__description">
-                    <p class="statistics__text">На один вечер мы соберём всех VIPов <br>партнёрского маркетинга на нашей вечеринке, чтобы дать тебе уникальный шанс замутить поистине космический нетворкинг со звёздами индустрии.</p>
-                    <p class="statistics__text">Не упусти возможность эксклюзивно пообщаться с топовыми арбитражниками, инфлюенсерами, рекламодателями и вебмастерами! Добро пожаловать в кулуары, где решаются судьбы <br>affiliate мира.</p>
+                    <p class="statistics__text">Все VIPы партнерского маркетинга - рядом с тобой. Один вечер. Одна тусовка. Один уникальный шанс замутить поистине космический нетворкинг со звездами индустрии.</p>
+                    <p class="statistics__text">Не упусти возможность эксклюзивно пообщаться с топовыми арбитражниками, инфлюенсерами, рекламодателями и вебмастерами! Добро пожаловать в кулуары, где решаются судьбы <br>affiliate-мира.</p>
                     <div class="line"></div>
                 </div>
             </div>
@@ -147,8 +147,8 @@
                     <h2 class="about__title">Кто мы<span>?</span></h2>
                     <div class="about__description">
                         <p class="about__text">Закрытый клуб, собравший элиту партнёрского маркетинга. </p>
-                        <p class="about__text">350 резидентов клуба активно помогают друг другу развиваться, делать топовые проекты, решать сложные вопросы <br>и конечно же увеличивать прибыль.</p>
-                        <p class="about__text">CPA.club это не только бизнес-завтраки, эксклюзивные закрытые вечеринкии совместные путешествия. В VIP-нетворкинге рождаются топовые коллаборации, свежие идеи и драйв, позволяющий двигать индустриювперёд и вверх!</p>
+                        <p class="about__text">350 резидентов клуба активно помогают друг другу развиваться, делать топовые проекты, решать сложные вопросы <br>и, конечно же, увеличивать прибыль.</p>
+                        <p class="about__text">CPA.club - это не просто бизнес-завтраки, эксклюзивные вечеринки в закрытом формате и совместные путешествия. Это в первую очередь VIP-нетворкинг, благодаря которому рождаются топовые коллаборации, свежие идеи и драйв, позволяющий индустрии продвигаться к новым вершинам.</p>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                     </div>
 
                     <div class="registration__column">
-                        <h2 class="registration__tittle">Регистрируйся на нашу закрытую <br>пати если ты<span>:</span></h2>
+                        <h2 class="registration__tittle">Регистрируйся на нашу закрытую <br>пати, если ты<span>:</span></h2>
                     </div>
                     <div class="registration__column">
                         <div class="conditios">
@@ -611,7 +611,7 @@
                         <img src="./img/mediapartners/map.png" alt="map">
                     </div>
                     <div class="media-partners__description">
-                        <p class="media-partners__text">Наше мероприятие носит закрытый характер. Каждый приглашенный гость получит “письмо в конверте” с адресом ивента за 5 дней до мероприятия.</p>
+                        <p class="media-partners__text">Поскольку наше мероприятие носит закрытый характер, мы решили раскрыть локацию за 5 дней до начала. Каждый приглашенный гость получит индивидуальное “письмо в конверте” с адресом места, где пройдет вечеринка.</p>
                     </div>
                     
                 </div>
