--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </h2>
                     <img src="./img/main/galaxy.png" alt="galaxy" class="main__image">
                     <h2 class="main__title">ОФИЦИАЛЬНАЯ ПРЕПАТИ WAS'21</h2>
-                    <p class="main__description">по партнерскому маркетингу</p>
+                    <p class="main__description">со всеми топами партнерского маркетинга</p>
                 </div>
 
                 <div class="time">
