--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <span class="statistics__subtitle">Часов нетворкинга</span>
                     </div>
                     <div class="statistics__title">
-                        <h2 class="statistics__title-value">250</h2>
+                        <h2 class="statistics__title-value">500</h2>
                         <span class="statistics__subtitle">Приглашенных гостей</span>
                     </div>
                     <div class="statistics__title">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="statistics__description">
                     <p class="statistics__text">Все VIPы партнерского маркетинга - рядом с тобой. Один вечер. Одна тусовка. Один уникальный шанс замутить поистине космический нетворкинг со звездами индустрии.</p>
-                    <p class="statistics__text">Не упусти возможность эксклюзивно пообщаться с топовыми арбитражниками, инфлюенсерами, рекламодателями и вебмастерами! Добро пожаловать в кулуары, где решаются судьбы <br>affiliate-мира.</p>
+                    <p class="statistics__text">Не упусти возможность эксклюзивно пообщаться с топовыми арбитражниками, инфлюенсерами, рекламодателями и вебмастерами! <br>Добро пожаловать в кулуары, где решаются судьбы affiliate-мира.</p>
                     <div class="line"></div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                     <h2 class="about__title">Кто мы<span>?</span></h2>
                     <div class="about__description">
                         <p class="about__text">Закрытый клуб, собравший элиту партнёрского маркетинга. </p>
-                        <p class="about__text">350 резидентов клуба активно помогают друг другу развиваться, делать топовые проекты, решать сложные вопросы <br>и, конечно же, увеличивать прибыль.</p>
+                        <p class="about__text">350 резидентов клуба активно помогают друг другу развиваться, делать топовые проекты, решать сложные вопросы и, конечно же, увеличивать прибыль.</p>
                         <p class="about__text">CPA.club - это не просто бизнес-завтраки, эксклюзивные вечеринки в закрытом формате и совместные путешествия. Это в первую очередь VIP-нетворкинг, благодаря которому рождаются топовые коллаборации, свежие идеи и драйв, позволяющий индустрии продвигаться к новым вершинам.</p>
                     </div>
                 </div>
